# bmsui

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  configure.sh  imgui.ini  requirements.txt  temp.cc
assets/: bmsui.desktop  bmsui_template.desktop  imgui.ini
src/: bms.cc  bms.hh  double_fork.cc  double_fork.hh  graph.hh  main.cc  monitoring_window.cc  monitoring_window.hh  paths.hh  pipe.hh  ring.hh  scripts.hh  simulator.cc  simulator.hh  simulator_impl.hh  simulator_impl_linux.cc  simulator_impl_windows.cc  utils.hh
util/: configure.bat  configure.sh  populate_bms.py  start_comm.sh  windows_broker.py
